--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #bdccac;
+    font-family: Arial, sans-serif;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .App h1 {
+    color: rgb(29, 44, 14);
+    font-size: 24px;
+    margin-bottom: 16px;
+    text-align: center;
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Style the dropdown container */
+  .CustomSelect {
+    display: flex;
+    justify-content: center;
+    width: auto;
   }
-}
